--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,4 @@
 <resources>
     <string name="app_name">TestApp01</string>
-    <string name="hello">Hello</string>
-    <string name="world">World</string>
-    <string name="button">Button</string>
-    <string name="hint">input</string>
+    <string name="add_button_text">Add</string>
 </resources>
