--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">TestApp01</string>
     <string name="add_button_text">Add</string>
+    <string name="save_button_text">Save</string>
     <string name="back_button_text">Back</string>
 </resources>
